@@ -6,6 +6,9 @@
   PersistentObject.
 - Implemented enhancement #10727: Improved error messages for PersistentObject
   with ManualGenerator.
+- Implemented enhancement #10151: Improved Database and PersistentObject
+  datatype support (especially binary data). The object definitions allow to
+  specify the datatype of the database column assigned to a property.
 - Fixed issue #10205: binding variables with an undeclared var doesn't throw
   an exception. If getState() on a persistent object does not return an array
   an exception is thrown now.
